2013-11-18  Per Bothner  <per@bothner.com>

	* lang/Translator.java (define): We may need an alias if the
	current scope is not the scope for the definition.
	This fixes Savannah bug #40616 "Unhygienic syntax-rules".

2013-11-13  Per Bothner  <per@bothner.com>

	* lang/Translator.java (resolveModule): Reset current line
	position, so we don't have "dangling" line numbers from a
	previous phase.

2013-11-12  Per Bothner  <per@bothner.com>

	* lang/SyntaxTemplate.java (print_template_program): Update
	commented-out debugging helper.

2013-11-11  Per Bothner  <per@bothner.com>

	* lang/Eval.java (evalBody): Even simpler, just remove the
	save/restore of the formStack.  Not sure why it would be needed,
	since eval creates a fresh Translator and thus FormStack each time.

2013-11-11  Per Bothner  <per@bothner.com>

	* lang/Eval.java (evalBody): Instead of setting the magic variable
	firstForm, just save and restore the formStack.
	* lang/Translator.java (firstForm): Remove field.
	(FormStack.pushAll): New method.

2013-11-10  Per Bothner  <per@bothner.com>

	* lang/Translator.java (class FormStack): Use new class to
	implement formStack as linked list, rather than a java.util.Stack.
	Using a linked list allows storing positions using PairWithPosition.
	Moving lists back and forth actually works pretty well.
	(formStack): An instance of FormStack rather than Stack.
	(class ValuesFromLList): Helper class.
	(popForm): Use ValuesFromLList.
	(vectorReverse): Remove no-longer needed method.
	* lang/Syntax.java (scanForDefinitions): Remove forms parameter.
	* standard/begin.java: Have scanBody leave scanned forms
	in the formStack, rather than a list - which then needs to
	be pushed to the formStack. This fixes Savannah bug #40494
	"internal error on kawa -C bug.scm, 1.14 and head".
	* lang/Eval.java: Update for new APIs.
	* standard/ImportFromLibrary.java: Likewise.
	* standard/define.java: Likewise.
	* standard/define_alias.java: Likewise.