@@ -1,3 +1,9 @@
+2013-11-18   John Tobey <jtobey@john-edwin-tobey.org>
+	     Per Bothner  <per@bothner.com>
+
+	* mac-test.scm: Another test from Savannah bug #40616
+	"Unhygienic syntax-rules".
+
 2013-11-18  Per Bothner  <per@bothner.com>
 
 	* mac-test.scm: Add example from Kawa "internals" documentation.
