@@ -1,5 +1,9 @@
 2013-11-18  Per Bothner  <per@bothner.com>
 
+	* lang/Translator.java (define): When creating an alias, the
+	generated name should be an uninterned symbol, not an uninterned
+	String, since NameLookup#lookup uses equals when comparing names.
+
 	* lang/Translator.java (define): We may need an alias if the
 	current scope is not the scope for the definition.
 	This fixes Savannah bug #40616 "Unhygienic syntax-rules".
